--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -23,21 +23,25 @@ on_success:
 - ps: >-
     $url = "https://github.com/narfman0/nodice/releases/download/0.1/gtk-runtime.zip"
 
-    $output = "C:\projects\nodice\gtk-runtime.zip"
+    $projectdir = "C:\projects\nodice"
 
-    $builddir = "C:\projects\nodice\Release"
+    $output = "$projectdir\gtk-runtime.zip"
+
+    $builddir = "$projectdir\Release"
 
     [Net.ServicePointManager]::SecurityProtocol = [Net.SecurityProtocolType]::Tls12
 
     (New-Object System.Net.WebClient).DownloadFile($url, $output)
 
-    Expand-Archive $output -DestinationPath $builddir
+    Expand-Archive $output -DestinationPath $projectdir
+
+    Copy-Item $projectdir\gtk-runtime\* $builddir
 
     $url = "https://github.com/narfman0/nodice/releases/download/0.1/nesasm.exe"
 
     (New-Object System.Net.WebClient).DownloadFile($url, "$builddir\nesasm.exe")
 
-    Copy-Item "C:\projects\nodice\bin\config.xml" -Destination $builddir
+    Copy-Item "$projectdir\bin\config.xml" -Destination $builddir
 
     Compress-Archive -Path $builddir\* -CompressionLevel Fastest -DestinationPath $builddir\nodice
 
